--- a/Prontocloud/Prontocloud.html
+++ b/Prontocloud/Prontocloud.html
@@ -19,7 +19,10 @@
      <div class="main-container"
 
           <header>
-               <img src="./images/prontocloud.png" alt="Prontocloud">
+               <div class="container">
+                                 <img src="./images/prontocloud.png" alt="Prontocloud">  
+               </div>
+
           </header>
 
           <section>
@@ -35,7 +38,8 @@
 
                     <h1> Planejamento para criação de sites</h1>
 
-                    <img src="./images/web-design-planning-700x300.jpg" alt="Planejamento para criação de sites"
+                    <img src="./images/web-design-planning-700x300.jpg" alt="Planejamento para criação de sites"<br>
+
 
                     <h2>Guia de criação de sites</h2>
 
@@ -87,11 +91,20 @@
                     <p>Se quiser pode compartilhar seu resultado com a gente. No próximo post vamos continuar com o nosso guia de criação de sites , falando sobre os aspectos técnicos do desenvolvimento do seu site.</p>
 
                </article>
+               <article>
+                    <h1>Ficou Interessado?</h1>
+                    <p>Então preencha os campos abaixo para receber mais informações sobre nossos produtos e serviços</p>
 
+                    <script src="https://www.cognitoforms.com/f/seamless.js" data-key="KmMO-i9DfEGyj4qJL0B3rg" data-form="1"></script>
+
+               </article>
           </section>
           <footer>
-               <p>&copy; Prontocloud. Todos os direitos reservados.
-               <small> Desenvolvido por João Matere</small></p>
+               <div class="container">
+                                  <p>&copy; Prontocloud. Todos os direitos reservados.
+               <small> Desenvolvido por João Matere</small></p> 
+               </div>
+
           </footer>
 </div>
 </body>
