--- a/JavaScript/funcoes.html
+++ b/JavaScript/funcoes.html
@@ -21,7 +21,9 @@
          <button type="submit">Enviar</button>
       </form>
 
-      <div id="resultado"></div>
+      <div id="resultado">
+        
+      </div>
 
     </div>
 
