--- a/JavaScript/funcoes.html
+++ b/JavaScript/funcoes.html
@@ -5,6 +5,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Javascript</title>
+ <link rel="stylesheet" type="text/css" href="../html/css/style2.css"
 </head>
 
 
@@ -13,12 +14,22 @@
     <div class="container">
 
       <form id="formulario-01">
-         <input type="text" placeholder="Digite um número" name="n1">
-         <input type="text" placeholder="Digite um número" name="n2">
-         <input type="text" placeholder="Digite um número" name="n3">
-         <input type="text" placeholder="Digite um número" name="n4">
+        <h2>Cálculo de média</h2>
+        <p>Preencha as notas de 0 a 10</p>
+         <input type="text" placeholder="Digite um número" class="mensagem" name="n1">
+         <input type="text" placeholder="Digite um número" class="mensagem" name="n2">
+         <input type="text" placeholder="Digite um número" class="mensagem" name="n3">
+         <input type="text" placeholder="Digite um número" class="mensagem" name="n4">
 
          <button type="submit">Enviar</button>
+      </form>
+
+      <form id="formulario-02">
+        <h2>Faça seu cadastro</h2>
+        <input type="text" placeholder="digite seu nome" class="mensagem" name="nome">
+        <input type="text" placeholder="digite seu email" class="mensagem" name="email">
+        <input type="text" placeholder="digite seu telefone" class="mensagem" name="telefone">
+        <button type="submit">Enviar</button>
       </form>
 
       <div id="resultado">
@@ -26,9 +37,7 @@
       </div>
 
     </div>
-
-
-    <script type="text/javascript" src="./js/script.js"></script>
+   <script type="text/javascript" src="./js/script.js"></script>
  
 </body>
 </html>
