--- a/JavaScript/funcoes.html
+++ b/JavaScript/funcoes.html
@@ -16,19 +16,19 @@
       <form id="formulario-01">
         <h2>Cálculo de média</h2>
         <p>Preencha as notas de 0 a 10</p>
-         <input type="text" placeholder="Digite um número" class="mensagem" name="n1">
-         <input type="text" placeholder="Digite um número" class="mensagem" name="n2">
-         <input type="text" placeholder="Digite um número" class="mensagem" name="n3">
-         <input type="text" placeholder="Digite um número" class="mensagem" name="n4">
+         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n1">
+         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n2">
+         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n3">
+         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n4">
 
          <button type="submit">Enviar</button>
       </form>
 
       <form id="formulario-02">
         <h2>Faça seu cadastro</h2>
-        <input type="text" placeholder="digite seu nome" class="mensagem" name="nome">
-        <input type="text" placeholder="digite seu email" class="mensagem" name="email">
-        <input type="text" placeholder="digite seu telefone" class="mensagem" name="telefone">
+        <input type="text" placeholder="digite seu nome" class="obrigatorio" name="nome">
+        <input type="text" placeholder="digite seu email" class="obrigatorio" name="email">
+        <input type="text" placeholder="digite seu telefone" class="obrigatorio" name="telefone">
         <button type="submit">Enviar</button>
       </form>
 
@@ -37,7 +37,7 @@
       </div>
 
     </div>
-   <script type="text/javascript" src="./js/script.js"></script>
+   <script type="text/javascript" src="./js/script.js" defer></script>
  
 </body>
 </html>
