adicionando formulario com tratativa de erros

--- a/JavaScript/formulario.html
+++ b/JavaScript/formulario.html
@@ -5,7 +5,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Javascript</title>
- <link rel="stylesheet" type="text/css" href="../html/css/style2.css"
+ <link rel="stylesheet" type="text/css" href="../html/css/style2.css">
 </head>
 
 
@@ -13,24 +13,21 @@
 
     <div class="container">
 
-      <form id="formulario-01">
-        <h2>Cálculo de média</h2>
-        <p>Preencha as notas de 0 a 10</p>
-         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n1">
-         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n2">
-         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n3">
-         <input type="text" placeholder="Digite um número" class="obrigatorio numero" name="n4">
 
-         <button type="submit">Enviar</button>
-      </form>
+      <div class="mensagem"></div>
 
       <form id="formulario-02">
         <h2>Faça seu cadastro</h2>
         <input type="text" placeholder="digite seu nome" class="obrigatorio" name="nome">
-        <input type="text" placeholder="digite seu email" class="obrigatorio" name="email">
+        <input type="text" placeholder="digite seu email" class="email" name="email">
         <input type="text" placeholder="digite seu telefone" class="obrigatorio" name="telefone">
+        <input type="text" placeholder="digite seu cep" class="obrigatorioNumero" name="cep">
+        <input type="text" placeholder="digite seu cidade" class="obrigatorio" name="cidade">
+        <input type="text" placeholder="digite seu uf" class="obrigatorioUF" name="uf">
         <button type="submit">Enviar</button>
       </form>
+
+      <div class="mensagem"></div>
 
       <div id="resultado">
         
