--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <!--link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./vendor/owl/css/owl.css">
-    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
-    <link rel="stylesheet" href="./vendor/jquery-ui/jquery-ui.css"> -->
-    <link rel="stylesheet" href="./dist/css/styles.min.css">
+    <link rel="stylesheet" href="./vendor/fontawesome/fontawesome.css">
+    <link rel="stylesheet" href="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.css"> -->
 
-    <!-- <link rel="stylesheet" href="./src/css/style.css"> -->
-    <title>WebStore - Loja especializada</title>
+    <link rel="stylesheet" href="dist/css/styles.min.css">
+    <title>Gulp</title>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark static-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="dist/images/header-logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -27,16 +26,18 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item2">
+                        <a class="nav-link" id="opener" href="produtos" rel="produtos">Produtos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#produtos">Produtos</a>
+                        <a class="nav-link nav-modal-open" href="about.html" rel="sobre">Sobre nós</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-modal-open" href="#sobre" rel="sobre">Sobre nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-modal-open" href="#contato" rel="contato">Contato</a>
+                        <a class="nav-link nav-modal-open" href="contact.html" rel="contato">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -48,9 +49,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="caption">
-                        <h2>Nova coleção</h2>
+                        <h2>Ecommerce </h2>
                         <div class="line-dec"></div>
-                        <p>Confira os novos itens da nossa nova coleção de roupas</p>
+                        <p>HTML Template can be converted into your desired CMS theme. </p>
                     </div>
                 </div>
             </div>
@@ -71,6 +72,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-01.jpg" alt="Item 1">
                             <h4>Produto 1</h4>
+                            <span class="categoria1"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -79,6 +82,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-02.jpg" alt="Item 2">
                             <h4>Produto 2</h4>
+                            <span class="categoria1"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -87,6 +92,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-03.jpg" alt="Item 3">
                             <h4>Produto 3</h4>
+                            <span class="categoria2"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -95,6 +102,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-04.jpg" alt="Item 4">
                             <h4>Produto 4</h4>
+                            <span class="categoria3"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -103,6 +112,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-05.jpg" alt="Item 5">
                             <h4>Produto 5</h4>
+                            <span class="categoria3"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -111,6 +122,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-06.jpg" alt="Item 6">
                             <h4>Produto 6</h4>
+                            <span class="categoria4"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -119,6 +132,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-04.jpg" alt="Item 7">
                             <h4>Produto 7</h4>
+                            <span class="categoria3"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -127,6 +142,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-05.jpg" alt="Item 8">
                             <h4>Produto 8</h4>
+                            <span class="categoria3"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -135,6 +152,8 @@
                         <div class="featured-item">
                             <img src="dist/images/item-06.jpg" alt="Item 9">
                             <h4>Produto 9</h4>
+                            <span class="categoria4"></span>
+                            <hr>
                             <h6>R$ 20,00</h6>
                             <a href="single-product.html">
                                 Comprar
@@ -192,10 +211,11 @@
                 <div class="col-md-12">
                     <div class="footer-menu">
                         <ul>
-                            <li><a href="#top">Home</a></li>
-                            <li><a href="#produtos">Produtos</a></li>
-                            <li><a href="#sobre" rel="sobre" class="nav-modal-open">Sobre</a></li>
-                            <li><a href="#contato" rel="contato" class="nav-modal-open">Contato</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a a class="nav-link nav-modal-open" href="sobre" rel="sobre">Sobre</a></li>
+                            <li class="nav-item2"><a class="nav-link" id="opener" href="produtos"
+                                    rel="produtos">Produtos</a></li>
+                            <li><a class="nav-link nav-modal-open" href="contact.html" rel="contato">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -204,7 +224,9 @@
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/jo%C3%A3o-matere-6a16b61b2/" target="_blank"><i
+                                        class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-rss"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -224,116 +246,100 @@
         </div>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+
+    <!-- Modal Body -->
+    <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+    <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-md" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title" id="modalTitleId">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+
                 </div>
+
             </div>
         </div>
     </div>
-
 
     <div id="contato" class="visually-hidden">
 
         <form action="post" class="form">
 
-            <div class="mb-3">
+            <div class="mb-0">
                 <label for="nome" class="form-label">Nome</label>
-                <input type="text" name="nome" id="nome" title="Insira seu nome completo" class="form-control"
-                    placeholder="Digite seu nome" aria-describedby="helpNome">
-                <small id="helpNome" class="text-muted">
-                    Digite um nome válido
-                </small>
+                <input type="text" name="nome" id="nome" class="form-control" placeholder="Digite seu Nome"
+                    aria-describedby="helpNome">
+                <small id="helpNome" class="text-muted">Digite um nome válido</small>
             </div>
 
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
+            <div class="mb-0">
+                <label for="e-mail" class="form-label">Email</label>
                 <input type="text" name="email" id="email" class="form-control" placeholder="Digite seu e-mail"
                     aria-describedby="helpEmail">
-                <small id="helpEmail" class="text-muted">
-                    Digite um e-mail válido
-                </small>
+                <small id="helpEmail" class="text-muted">Digite um email válido</small>
             </div>
 
-            <div class="mb-3">
+            <div class="mb-0">
                 <label for="date" class="form-label">Data</label>
-                <input type="text" name="date" id="date" class="form-control" placeholder="Digite seu e-mail"
+                <input type="text" name="date" id="date" class="form-control" placeholder="Digite a data"
                     aria-describedby="helpDate">
-                <small id="helpDate" class="text-muted">
-                    Digite uma data válida
-                </small>
+                <small id="helpDate" class="text-muted">Digite uma data válida</small>
             </div>
 
-            <div class="mb-3">
+            <div class="mb-0">
                 <label for="time" class="form-label">Hora</label>
                 <input type="text" name="time" id="time" class="form-control" placeholder="Digite a hora"
-                    aria-describedby="helpHora">
-                <small id="helpHora" class="text-muted">
-                    Digite um tempo válido
-                </small>
+                    aria-describedby="helpTime">
+                <small id="helpTime" class="text-muted">Digite uma hora válida</small>
             </div>
 
-            <div class="mb-3">
+            <div class="mb-0">
                 <label for="cep" class="form-label">CEP</label>
-                <input type="text" name="cep" id="cep" class="form-control" placeholder="Digite seu cep"
+                <input type="text" name="cep" id="cep" class="form-control" placeholder="Digite seu CEP"
                     aria-describedby="helpCEP">
-                <small id="helpCEP" class="text-muted">
-                    Digite um tempo válido
-                </small>
+                <small id="helpCEP" class="text-muted">Digite um CEP válido</small>
             </div>
 
-            <div class="mb-3">
+            <div class="mb-0">
                 <label for="phone" class="form-label">Celular</label>
-                <input type="text" name="phone" id="phone" class="form-control" placeholder="Digite seu phone"
-                    aria-describedby="helpCelular" required>
-                <small id="helpCelular" class="text-muted">
-                    Digite um celular válido
-                </small>
+                <input type="text" name="phone" id="phone" class="form-control" placeholder="Digite seu Celular"
+                    aria-describedby="helpCelular">
+                <small id="helpCelular" class="text-muted">Digite um Celular válido</small>
             </div>
 
             <div class="mb-3">
                 <label for="cpf" class="form-label">CPF</label>
-                <input type="text" name="cpf" id="cpf" class="form-control" placeholder="Digite seu cpf"
-                    aria-describedby="helpCPF" required>
-                <small id="helpCPF" class="text-muted">
-                    Digite um celular válido
-                </small>
+                <input type="text" name="cpf" id="cpf" class="form-control" placeholder="Digite seu CPF"
+                    aria-describedby="helpCpf">
+                <small id="helpCpf" class="text-muted">Digite um CPF válido</small>
             </div>
 
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-success">Enviar</button>
 
 
         </form>
 
-    </div>
-
-
-    <div id="sobre" class="visually-hidden">
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, consequatur explicabo eos doloribus suscipit
-            impedit nulla voluptates eius ad sint fugiat, atque corrupti, pariatur nobis dignissimos! Ut at tempore
-            recusandae?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, consequatur explicabo eos doloribus suscipit
-            impedit nulla voluptates eius ad sint fugiat, atque corrupti, pariatur nobis dignissimos! Ut at tempore
-            recusandae?</p>
 
     </div>
 
-    <!-- Bibliotecas 
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <div id="sobre" class="visually-hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae dolorum,
+        inventore recusandae quaerat nemo exercitationem cupiditate expedita numquam placeat culpa fugiat, odit a nobis
+        officiis. Cupiditate dolorem nostrum cum illum.</div>
+
+    <div id="dialog" title="Produtos">
+        <p>Verifique nossos produtos disponíveis na sessão de Destaques logo abaixo.</p>
+    </div>
+
+    <!--script src="./vendor/jquery/jquery-3.6.0.min.js"></script>
+    <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="./vendor/owl/js/owl.js"></script>
-    <script src="./vendor/jquery-mask/jquery.mask.js"></script>
-    <script src="./vendor/jquery-ui/jquery-ui.js"></script>-->
+    <script src="./vendor/jquery-mask/jquery.mask.min.js"></script>
+    <script src="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script> -->
 
-    <!-- Scripts Unidos e Minificados -->
-    <script src="./dist/js/scripts.min.js"></script>
+    <script src="dist/js/scripts.min.js"></script>
 </body>
 
 </html>
