finalizado gerenciamento de tarefas

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./vendor/fontawesome/fontawesome.css">
     <link rel="stylesheet" href="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.css"> -->
 
-    <link rel="stylesheet" href="dist/css/styles.min.css">
+    <link rel="stylesheet" href="./css/styles.min.css">
     <title>Gulp</title>
 </head>
 
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="dist/images/header-logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="./images/header-logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
                 <div class="col-md-12">
                     <div class="owl-carousel owl-theme">
                         <div class="featured-item">
-                            <img src="dist/images/item-01.jpg" alt="Item 1">
+                            <img src="./images/item-01.jpg" alt="Item 1">
                             <h4>Produto 1</h4>
                             <span class="categoria1"></span>
                             <hr>
@@ -80,7 +80,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-02.jpg" alt="Item 2">
+                            <img src="./images/item-02.jpg" alt="Item 2">
                             <h4>Produto 2</h4>
                             <span class="categoria1"></span>
                             <hr>
@@ -90,7 +90,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-03.jpg" alt="Item 3">
+                            <img src="./images/item-03.jpg" alt="Item 3">
                             <h4>Produto 3</h4>
                             <span class="categoria2"></span>
                             <hr>
@@ -100,7 +100,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-04.jpg" alt="Item 4">
+                            <img src="./images/item-04.jpg" alt="Item 4">
                             <h4>Produto 4</h4>
                             <span class="categoria3"></span>
                             <hr>
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-05.jpg" alt="Item 5">
+                            <img src="./images/item-05.jpg" alt="Item 5">
                             <h4>Produto 5</h4>
                             <span class="categoria3"></span>
                             <hr>
@@ -120,7 +120,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-06.jpg" alt="Item 6">
+                            <img src="./images/item-06.jpg" alt="Item 6">
                             <h4>Produto 6</h4>
                             <span class="categoria4"></span>
                             <hr>
@@ -130,7 +130,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-04.jpg" alt="Item 7">
+                            <img src="./images/item-04.jpg" alt="Item 7">
                             <h4>Produto 7</h4>
                             <span class="categoria3"></span>
                             <hr>
@@ -140,7 +140,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-05.jpg" alt="Item 8">
+                            <img src="./images/item-05.jpg" alt="Item 8">
                             <h4>Produto 8</h4>
                             <span class="categoria3"></span>
                             <hr>
@@ -150,7 +150,7 @@
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="dist/images/item-06.jpg" alt="Item 9">
+                            <img src="./images/item-06.jpg" alt="Item 9">
                             <h4>Produto 9</h4>
                             <span class="categoria4"></span>
                             <hr>
@@ -205,7 +205,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="logo">
-                        <img src="dist/images/header-logo.png" alt="">
+                        <img src="./images/header-logo.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -339,7 +339,7 @@
     <script src="./vendor/jquery-mask/jquery.mask.min.js"></script>
     <script src="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script> -->
 
-    <script src="dist/js/scripts.min.js"></script>
+    <script src="./js/scripts.min.js"></script>
 </body>
 
 </html>
