modulo gulp + sass

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./vendor/owl/css/owl.css">
-    <link rel="stylesheet" href="./vendor/fontawesome/fontawesome.css">
-    <link rel="stylesheet" href="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.css"> -->
 
-    <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./dist/css/libs.min.css">
+    <link rel="stylesheet" href="/dist/css/style.css">
     <title>Gulp</title>
 </head>
 
@@ -249,7 +247,7 @@
 
     <!-- Modal Body -->
     <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
-    <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+    <!--div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-md" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -262,9 +260,9 @@
 
             </div>
         </div>
-    </div>
+    </div-->
 
-    <div id="contato" class="visually-hidden">
+    <!--div id="contato" class="visually-hidden">
 
         <form action="post" class="form">
 
@@ -323,23 +321,23 @@
         </form>
 
 
-    </div>
+    </div-->
 
-    <div id="sobre" class="visually-hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae dolorum,
+    <!--div id="sobre" class="visually-hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae dolorum,
         inventore recusandae quaerat nemo exercitationem cupiditate expedita numquam placeat culpa fugiat, odit a nobis
         officiis. Cupiditate dolorem nostrum cum illum.</div>
 
     <div id="dialog" title="Produtos">
         <p>Verifique nossos produtos disponíveis na sessão de Destaques logo abaixo.</p>
-    </div>
+    </div-->
 
-    <!--script src="./vendor/jquery/jquery-3.6.0.min.js"></script>
-    <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./vendor/owl/js/owl.js"></script>
-    <script src="./vendor/jquery-mask/jquery.mask.min.js"></script>
-    <script src="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script> -->
-
-    <script src="./js/scripts.min.js"></script>
+        <script src="./vendor/jquery/jquery-3.6.0.min.js"></script>
+        <script src="./vendor/owl/js/owl.js"></script>
+        <script src="./vendor/jquery-mask/jquery.mask.min.js"></script>
+        <script src="./vendor/jquery-ui/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script> 
+        
+        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+   <script> src="/dist/js/scripts.min.js"</script>
 </body>
 
 </html>
