--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
     <section>
         <div class="destack">
             <div class="container">
-                <h1>Audi A5</h1>
-                <h2>Destaque</h2>
-                <img src="./images/pexels-mike-244206.jpg" alt="Foto Audi por Mike em Pexels">
-                <p>Carro seminovo, 4 portas, completo com ar-condicionado, vidro e travas elelétricas.</p>
+                <h1 class="destack__title">Audi A5</h1>
+                <h2 class="destack__subtitle">Destaque</h2>
+                <img class="destack__image" src="./images/pexels-mike-244206.jpg" alt="Foto Audi por Mike em Pexels">
+                <p class="destack__description">Carro seminovo, 4 portas, completo com ar-condicionado, vidro e travas elelétricas.</p>
             </div>
         </div>
         <div class="container">
             <div class="blocks cars">
-                <h2>Ver Carros</h2>
-                <ul>
-                    <li>
-                        <div class="img-container">
+                <h2 class="blocks__title cars__title">Ver Carros</h2>
+                <ul class="blocks__list cars__list">
+                    <li class="blocks__item cars__item cars__item--destack">
+                        <div class="blocks__img-container cars__img-container">
                             <img src="./images/pexels-mike-431950.jpg" alt="Foto Mike em Pexels">
                         </div> 
-                        <a href="#01">Ver mais</a>
+                        <a class="blocks__button cars__button" href="#01">Ver mais</a>
                     </li>
-                    <li>
-                        <div class="img-container">
+                    <li class="cars__item">
+                        <div class="blocks__img-container cars__img-container">
                             <img src="./images/pexels-pixabay-248747.jpg" alt="Foto Pixabay Pixels">
                         </div>
-                        <a href="#02">Ver mais</a>
+                        <a class="blocks__button cars__button" href="#02">Ver mais</a>
                     </li>
-                    <li>
-                        <div class="img-container">
+                    <li class="cars__item ">
+                        <div class="blocks__img-container cars__img-container">
                             <img src="./images/pexels-torsten-dettlaff-70912.jpg" alt="Foto Pexels Torsten">
                         </div> 
-                        <a href="#03"> Ver mais</a>
+                        <a class="blocks__button cars__button" href="#03"> Ver mais</a>
                     </li>
                 </ul>
             </div>
